i got the additivesynth to make oscillators in an array but they sound very weird. my theory is that this is because of the rotation of the phases but i cand FIGURE how to change this, rotation happens in the osdcillator baseclass whatever

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,14 @@
     *.s
     *.cdl
     *.out
+    *.json
+
+    */example
+
+    .vscode/
+    .venv/
+    .idea/
+    cmake-build-debug/
     
 
 gitignore/
