--- a/csd2b/opdrachten/soundingSynth/CMakeLists.txt
+++ b/csd2b/opdrachten/soundingSynth/CMakeLists.txt
@@ -12,7 +12,7 @@ target_link_libraries(soundingSynth
 
         PUBLIC
         juce::juce_recommended_config_flags
-#        juce::juce_recommended_warning_flags
+        juce::juce_recommended_warning_flags
 )
 
 target_compile_features(soundingSynth PRIVATE cxx_std_20)
