--- a/2c/CMakeLists.txt
+++ b/2c/CMakeLists.txt
@@ -1,5 +1,7 @@
 #add_subdirectory(codingClinics)
 #add_subdirectory(sharedCode)
 #add_subdirectory(theorie)
+
+add_subdirectory(test)
 add_subdirectory(assignments)
 add_subdirectory(TOOLBELT)
