--- a/2c/assignments/CMakeLists.txt
+++ b/2c/assignments/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_subdirectory(00_circBufferSession)
-#add_subdirectory(trem)
+#add_subdirectory(00_circBufferSession)
+add_subdirectory(02_tremDylan)
