getting some weird linter errors. checking the build

--- a/2c/eindopdracht/CMakeLists.txt
+++ b/2c/eindopdracht/CMakeLists.txt
@@ -1,9 +1,9 @@
-project(02_effect VERSION 0.0.1)
-juce_add_console_app(02_effect PRODUCT_NAME "02_effect")
-target_sources(02_effect PRIVATE main.cpp callback.cpp effect.cpp tremolo.cpp delay.cpp Waveshaper.cpp)
-target_compile_definitions(02_effect PRIVATE JUCE_WEB_BROWSER=0 JUCE_USE_CURL=0 SOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
+project(Eindopdracht VERSION 0.0.1)
+juce_add_console_app(Eindopdracht PRODUCT_NAME "MagicBox")
+target_sources(Eindopdracht  PRIVATE main.cpp callback.cpp effect.cpp tremolo.cpp delay.cpp Waveshaper.cpp timestretcher.cpp)
+target_compile_definitions(Eindopdracht PRIVATE JUCE_WEB_BROWSER=0 JUCE_USE_CURL=0 SOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
 
-target_link_libraries(02_effect PRIVATE
+target_link_libraries(Eindopdracht PRIVATE
         oscillators
         audio
 	transformation
@@ -18,4 +18,4 @@ target_link_libraries(02_effect PRIVATE
         #        juce::juce_recommended_warning_flags
 )
 
-target_compile_features(02_effect PRIVATE cxx_std_20)
+target_compile_features(Eindopdracht PRIVATE cxx_std_20)
