--- a/2c/CMakeLists.txt
+++ b/2c/CMakeLists.txt
@@ -5,4 +5,5 @@
 add_subdirectory(test)
 add_subdirectory(assignments)
 add_subdirectory(codingClinics)
+add_subdirectory(eindopdracht)
 add_subdirectory(TOOLBELT)
