--- a/2c/CMakeLists.txt
+++ b/2c/CMakeLists.txt
@@ -2,8 +2,8 @@
 #add_subdirectory(sharedCode)
 #add_subdirectory(theorie)
 
-add_subdirectory(test)
+#add_subdirectory(test)
 add_subdirectory(assignments)
-add_subdirectory(codingClinics)
-add_subdirectory(eindopdracht)
+#add_subdirectory(codingClinics)
+#add_subdirectory(eindopdracht)
 add_subdirectory(TOOLBELT)
