--- a/2c/CMakeLists.txt
+++ b/2c/CMakeLists.txt
@@ -3,7 +3,7 @@
 #add_subdirectory(theorie)
 
 #add_subdirectory(test)
-add_subdirectory(assignments)
+#add_subdirectory(assignments)
 #add_subdirectory(codingClinics)
-#add_subdirectory(eindopdracht)
+add_subdirectory(eindopdracht)
 add_subdirectory(TOOLBELT)
