its completely broken. adding a second buffer (loopbuffer)

--- a/2c/CMakeLists.txt
+++ b/2c/CMakeLists.txt
@@ -2,7 +2,7 @@
 #add_subdirectory(sharedCode)
 #add_subdirectory(theorie)
 
-#add_subdirectory(test)
+add_subdirectory(test)
 #add_subdirectory(assignments)
 #add_subdirectory(codingClinics)
 add_subdirectory(eindopdracht)
